--- a/app/src/index.css
+++ b/app/src/index.css
@@ -16,6 +16,10 @@
   font-style: normal;
 }
 
+#root {
+  overflow-x: hidden;
+}
+
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
